[package]
name = "cyberdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
psl = "2.0.6"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
trust-dns-resolver = "0.21.0"
